# exampleAndroidRust

./: LICENSE-MIT  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/uk/co/davehadley/exampleandroidrust/: ExampleInstrumentedTest.kt  TestExampleRustLibrary.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/uk/co/davehadley/exampleandroidrust/: ExampleRustLibrary.kt  MainActivity.kt
app/src/main/java/uk/co/davehadley/exampleandroidrust/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/rust/: CMakeLists.txt
app/src/main/rust/example_rust_library/: Cargo.toml
app/src/main/rust/example_rust_library/src/: lib.rs
app/src/test/java/uk/co/davehadley/exampleandroidrust/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
